chore(server-dropwizard): fix Java 8 compliance